# sales-agent

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
mcp_tools/: __init__.py  airtable_crm.py  azure_logic_app.py  gmail_sender.py  hunter_io.py  openai_client.py  supabase_client.py  web_scraper.py
sales_automation/: __init__.py  agent.py  prompts.py
utils/: __init__.py  auth.py  data_models.py  helpers.py  supabase_client.py
